--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "update-pods": "cd ios && pod install --repo-update && cd .. "
   },
   "dependencies": {
+    "react-dom": "18.2.0",
+    "react-native-web": "0.19.9",
     "@fioprotocol/fiojs": "^1.0.1",
     "@fioprotocol/fiosdk": "git+https://git@github.com/trustee-wallet/fiosdk_typescript#release/1.2.x",
     "@gorhom/bottom-sheet": "2.4.1",
