--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.66.2",
     "metro-react-native-babel-transformer": "^0.66.2",
+    "react-scripts": "5.0.1",
     "react-test-renderer": "16.9.0",
     "typescript": "^3.8.3"
   },
