--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "react-scripts start",
-    "start": "react-native start",
+    "start": "react-script start",
     "test": "jest",
     "lint": "eslint .",
     "postinstall": "npx jetifier && rm -f shim.js && ./node_modules/.bin/rn-nodeify --hack --install && patch-package",
